--- a/app/views/page/_testimonial.html.erb
+++ b/app/views/page/_testimonial.html.erb
@@ -1,6 +1,6 @@
 <div class="box-title">
   <h3 class="h3-title small">
-    TRẢI NGHIỆM CỦA KHÁCH HÀNG
+    ĐÁNH GIÁ CỦA KHÁCH HÀNG
   </h3>
   <div class="title-icon">
     <img alt="" src="https://res.cloudinary.com/dtbumlftx/image/upload/v1588474399/title-icon_xqwppp.png" alt="">
@@ -51,7 +51,7 @@
                 </div>
                 <div class="line"></div>
                 <div class="author">
-                  JONATHAN VANCE  
+                  JONATHAN VANCE
                   <label> CEO & Founder EngoCreative</label>
                 </div>
               </div>
@@ -63,7 +63,7 @@
                 </div>
                 <div class="line"></div>
                 <div class="author">
-                  JONATHAN VANCE  
+                  JONATHAN VANCE
                   <label> CEO & Founder EngoCreative</label>
                 </div>
               </div>
@@ -75,7 +75,7 @@
                 </div>
                 <div class="line"></div>
                 <div class="author">
-                  JONATHAN VANCE  
+                  JONATHAN VANCE
                   <label> CEO & Founder EngoCreative</label>
                 </div>
               </div>
@@ -87,7 +87,7 @@
                 </div>
                 <div class="line"></div>
                 <div class="author">
-                  JONATHAN VANCE  
+                  JONATHAN VANCE
                   <label> CEO & Founder EngoCreative</label>
                 </div>
               </div>
@@ -99,7 +99,7 @@
                 </div>
                 <div class="line"></div>
                 <div class="author">
-                  JONATHAN VANCE  
+                  JONATHAN VANCE
                   <label> CEO & Founder EngoCreative</label>
                 </div>
               </div>
