--- a/app/views/page/colection/_colection2.html.erb
+++ b/app/views/page/colection/_colection2.html.erb
@@ -1,7 +1,7 @@
 <br><br>
 <div class="box-title">
   <h3 class="h3-title small">
-    MỘT SỐ HÌNH ẢNH KHÁCH HÀNG
+    MỘT SỐ HÌNH ẢNH
   </h3>
   <div class="title-icon">
     <img src="https://res.cloudinary.com/dtbumlftx/image/upload/v1588474399/title-icon_xqwppp.png" alt="">
@@ -18,7 +18,7 @@
                   <div class="ov3"></div>
                   <div class="ov4"></div>
                   <a href="#">
-                    <img src="https://res.cloudinary.com/dtbumlftx/image/upload/v1588520756/T%C3%BAM/95436581_2282684778705392_1008997970856640512_n_pnmubf.jpg">
+                    <img src="https://res.cloudinary.com/dtbumlftx/image/upload/v1613745846/base/colection4-3_vyucvy.png">
                   </a>
                 </div>
             </div>
@@ -29,7 +29,7 @@
                   <div class="ov3"></div>
                   <div class="ov4"></div>
                   <a href="#">
-                    <img src="https://res.cloudinary.com/dtbumlftx/image/upload/v1588520756/T%C3%BAM/95704043_873253303151047_8568994998639394816_n_lhpggo.jpg">
+                    <img src="https://res.cloudinary.com/dtbumlftx/image/upload/v1613745846/base/colection4-3_vyucvy.png">
                   </a>
                 </div>
             </div>
@@ -40,7 +40,7 @@
                   <div class="ov3"></div>
                   <div class="ov4"></div>
                   <a href="#">
-                    <img src="https://res.cloudinary.com/dtbumlftx/image/upload/v1588520756/T%C3%BAM/95463991_3045952385483536_5889962474349789184_n_iqjbto.jpg">
+                    <img src="https://res.cloudinary.com/dtbumlftx/image/upload/v1613745846/base/colection4-3_vyucvy.png">
                   </a>
                 </div>
             </div>
