--- a/app/views/page/container/_blog.html.erb
+++ b/app/views/page/container/_blog.html.erb
@@ -4,7 +4,7 @@
     <div class="container">
       <div class="box-title">
         <h3 class="h3-title">
-          KINH NGHIỆM LÀM ĐẸP
+          BLOG
         </h3>
         <div class="title-icon">
           <img src="https://res.cloudinary.com/dtbumlftx/image/upload/v1588474399/title-icon_xqwppp.png" alt="">
