--- a/app/views/page/container/_my_service.html.erb
+++ b/app/views/page/container/_my_service.html.erb
@@ -4,7 +4,7 @@
   <div class="row">
     <div class="box-title">
       <h3 class="h3-title small">
-        DỊCH VỤ CỦA CHÚNG TÔI
+          SẢN PHẨM CỦA CHÚNG TÔI
       </h3>
       <div class="title-icon">
         <img alt="" src="https://res.cloudinary.com/dtbumlftx/image/upload/v1588474399/title-icon_xqwppp.png" alt="">
@@ -24,11 +24,11 @@
             </ul>
           </div>
           <div class="images-merber">
-            <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_scale,h_405,w_270/v1588520757/T%C3%BAM/95573265_273472847023462_3285540983759962112_n_oaaxbp.jpg" alt="">
+            <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_scale,h_450,w_270/v1613745551/base/detail-product-3_t4e1kd.png" alt="">
           </div>
           <div class="title-merber">
-            <h3 class="name"><span>LÀM ĐẸP</span></h3>
-            <div class="job">GIẢM CÂN</div>
+            <h3 class="name"><span>ONE PIECE</span></h3>
+            <div class="job">ONE PIECE</div>
           </div>
         </div>
       </div>
@@ -41,11 +41,11 @@
             </ul>
           </div>
           <div class="images-merber">
-            <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_scale,h_405,w_270/v1588520757/T%C3%BAM/95556327_964684623974897_4225021541676482560_n_h23pad.jpg" alt="">
+            <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_scale,h_450,w_270/v1613745551/base/detail-product-3_t4e1kd.png" alt="">
           </div>
           <div class="title-merber">
-            <h3 class="name"><span>LÀM ĐẸP</span></h3>
-            <div class="job">GIẢM CÂN</div>
+            <h3 class="name"><span>MARVEL</span></h3>
+            <div class="job">MARVEL</div>
           </div>
         </div>
       </div>
@@ -58,11 +58,11 @@
             </ul>
           </div>
           <div class="images-merber">
-            <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_scale,h_405,w_270/v1588520757/T%C3%BAM/95159577_1563883730456227_8713706195031949312_n_p6jtue.jpg" alt="">
+            <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_scale,h_450,w_270/v1613745551/base/detail-product-3_t4e1kd.png" alt="">
           </div>
           <div class="title-merber">
-            <h3 class="name"><span>LÀM ĐẸP</span></h3>
-            <div class="job">GIẢM CÂN</div>
+            <h3 class="name"><span>DRAGON BALL</span></h3>
+            <div class="job">DRAGON BALL</div>
           </div>
         </div>
       </div>
@@ -75,11 +75,11 @@
             </ul>
           </div>
           <div class="images-merber">
-            <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_scale,h_405,w_270/v1588522026/T%C3%BAM/94616197_521733665161724_914606967786307584_n_hagazv.jpg" alt="">
+            <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_scale,h_450,w_270/v1613745551/base/detail-product-3_t4e1kd.png" alt="">
           </div>
           <div class="title-merber">
-            <h3 class="name"><span>LÀM ĐẸP</span></h3>
-            <div class="job">GIẢM CÂN</div>
+            <h3 class="name"><span>DRAGON BALL</span></h3>
+            <div class="job">DRAGON BALL</div>
           </div>
         </div>
       </div>
@@ -92,11 +92,11 @@
             </ul>
           </div>
           <div class="images-merber">
-            <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_scale,h_405,w_270/v1588522026/T%C3%BAM/94616197_521733665161724_914606967786307584_n_hagazv.jpg" alt="">
+            <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_scale,h_450,w_270/v1613745551/base/detail-product-3_t4e1kd.png" alt="">
           </div>
           <div class="title-merber">
-            <h3 class="name"><span>LÀM ĐẸP</span></h3>
-            <div class="job">GIẢM CÂN</div>
+            <h3 class="name"><span>DRAGON BALL</span></h3>
+            <div class="job">DRAGON BALL</div>
           </div>
         </div>
       </div>
@@ -109,11 +109,11 @@
             </ul>
           </div>
           <div class="images-merber">
-            <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_scale,h_405,w_270/v1588522026/T%C3%BAM/94616197_521733665161724_914606967786307584_n_hagazv.jpg" alt="">
+            <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_scale,h_450,w_270/v1613745551/base/detail-product-3_t4e1kd.png" alt="">
           </div>
           <div class="title-merber">
-            <h3 class="name"><span>LÀM ĐẸP</span></h3>
-            <div class="job">GIẢM CÂN</div>
+            <h3 class="name"><span>DRAGON BALL</span></h3>
+            <div class="job">DRAGON BALL</div>
           </div>
         </div>
       </div>
