--- a/app/views/page/header/_right_topbar.html.erb
+++ b/app/views/page/header/_right_topbar.html.erb
@@ -1,4 +1,3 @@
-<!-- right topbar -->
 <div class="col-sm-6 ">
 <div class="right-topbar">
 <div class="mini-cart white">
@@ -30,4 +29,5 @@
     </div>
   </li>
 </ul>
-<!-- end right topbar -->
+</div>
+</div>
