--- a/app/views/page/show.html.erb
+++ b/app/views/page/show.html.erb
@@ -1,9 +1,10 @@
 <div id="page">
   <div class="wapper-inner row-offcanvas row-offcanvas-left">
     <main class="wrapper main-content ">
-      <%= render "page/container/slider" %>
-      <%= render "page/container/box_title" %>
-      <%= render "page/container/about" %>
+      <%= render "page/container/promotion3" %>
+      <%= render "page/container/slider1" %>
+      <%= render "page/container/carousel_product" %>
+      <%= render "page/container/colection" %>
       <%= render "page/container/my_service" %>
       <%= render "testimonial" %>
       <%= render "page/container/blog" %>
@@ -11,5 +12,5 @@
       <%= render "page/colection/colection2" %>
       <%= render "page/container/contact" %>
     </main>
-  </div>	
+  </div>
 </div>
