--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <link rel="icon" type="images/favicon" href="https://res.cloudinary.com/dtbumlftx/image/upload/v1588520179/95334295_167755641261407_8535931833588645888_n_yniyaq.jpg">
+    <link rel="icon" type="images/favicon" href="">
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
@@ -22,7 +22,7 @@
     <%= render  "page/header/header" %>
     <%= yield %>
     <%= render  "page/footer" %>
-    <%= render  "layouts/popup" %>
+    <%#= render  "layouts/popup" %>
 
 
   </body>
