--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <link rel="icon" type="images/favicon" href="">
+    <link rel="icon" type="images/favicon" href="https://res.cloudinary.com/dtbumlftx/image/upload/v1613794426/base/Screen_Shot_2021-02-20_at_13.10.38_u7krvz.png">
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
